# Velvet-Programing-Language

./: Cargo.toml  README.md  about-velvet.html  build.rs  build.zig  download.html  index.html  pyproject.toml  requirements.txt  runtime.zig  style.css
.github/: README.md
core/: Cargo.toml  velvet.pest
core/src/: codegen.rs  compiler.rs  ffi.rs  interpreter.rs  lib.rs  main.rs  optimizer.rs  parser.rs  runtime.rs  semantic.rs
example/: advanced.vel  hello.vel  main.vel  weave.velvet
fmt/src/: main.rs
install/: install-compilate.sh  install.ps1  install.sh
lsp/src/: main.rs
repl/: Cargo.toml
vel/: help.py  init.py  interpreter.py  main.py  run.py  runtime.py  vel.py
velvet/: velvet_decl.pest
velvet/src/: interpreter.rs  mod.rs
weave/: Cargo.toml  Makefile  build.py  cli.py  deps.py  project.py  run.py  weave.h
weave/src/: build.c  build.rs  deps.rs  env.c  install.c  main.c  main.rs  project.rs  run.rs
