[package]
name = "velvet-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
llvm-sys = "0.15"
pest = "2.7"
pest_derive = "2.7"
serde_json = "1.0"
git2 = "0.18"
pyo3 = { version = "0.22", features = ["auto-initialize"] }

[build-dependencies]
cc = "1.0"
