[package]
name = "weave"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
crossterm = "0.28.1"
walkdir = "2.5.0"
reqwest = { version = "0.12", features = ["blocking"] }  # For package downloads
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
